# spark_to_databricks_sync

./: .gitignore  .pre-commit-config.yaml  README.md  job.py  main.py  main.py.py  pyproject.toml  sample.json  tst.py
shared/: utilities.py
src/: main.py  utilities.py
src/jobs/: job1.py
src/utils/: printers.py
utils/: printers.py
